﻿1.0.46
* Fixed a bug in shell extension where "Here" destination did not worked it there were other target destinations in INI

1.0.45
+ Added new setting ("ShowInShell=" and "ShowInGUI") to FB2EPUBExt.INI file to control user available destination paths
+ Added new setting "SingleDestination=" to [TARGETS] section of FB2EPUBExt.INI. If set to -1 all works as before, 
	if set to TargetNumber and this target enabled for shall extension then makes this target the only FB2Epub destination available in right-click menu
+ Added New "Folders" tab to the settings dialog, allows to control GUI and shell extension destination folders
* Fixed problem when ID of "v" section of the poem was lost in conversion preverting internal linking to it
* Changed default LOG folder to "LocalApplicationData" usualy C:\Users\<user name>\AppData\Local
* Fixed Capital Drop in case it encluded horizontal ellipsis before any character (in dialogs etc)
* Fixed several bugs that prevented conversion of files in rare cases of badly formated FB2
* Switched to version 1.0.16 of fb2librarynet library to fix several minor bugs
* Switched to version 1.0.15 of epublibrary library to fix several minor bugs
* Fixed problem with system not loading all the FB2 settings from .config file, introduced 2 version ago

1.0.44
+ Added ability for FB2ePubGUI to switch languages from menu
* Fixed condition that prevented x86 installer to run on x86 systems :)


1.0.43
+ Added ePub icons to contect menu
+ Added new parameter "/settings" to bring up converter setup window
+ Added first initial implementation of Fb2ePubGUI application (Drag'n'Drop) GUI for converter
* Changed build environment to Visual Studio 2010
* Changed shell extension to not create submenu if no paths set INI INI, in this case the item added to main menu
* Fixed the shell extension bug when providing destination without slas`h in INI caused resulting file not to be created